<resources>
    <string name="app_name">AI ChatHub</string>
    <string name="logo">logo</string>
    <string name="close_drawer">close drawer</string>
    <string name="open_drawer">open drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_main3">ChatActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="feedback_title">Feedback</string>
    <string name="title_profile">Profile</string>
    <string name="defaultUserId">user123</string>
    <string name="user_mail">mail@gmail.com</string>
    <string name="update_btn">Update</string>
    <string name="defaultUserName" />

    <array name="feedback_array">
        <item>suggestion</item>
        <item>suggestion</item>
        <item>suggestion</item>
        <item>suggestion</item>
        <item>suggestion</item>
        <item>suggestion</item>
    </array>
</resources>